--- a/backend/TRFSAE.MemberPortal.API/TRFSAE.MemberPortal.API.csproj
+++ b/backend/TRFSAE.MemberPortal.API/TRFSAE.MemberPortal.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0ded5ce2-3231-4159-b158-defb3ef507c3</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
