refactor (frontend): vite config

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -11,6 +11,8 @@
     "alwaysStrict": true,
     "skipLibCheck": true,
     "noEmit": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
