--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,16 @@
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
+    "lightningcss": "^1.30.2",
     "shadcn": "^3.3.1",
+    "sharp": "^0.34.4",
+    "svgo": "^4.0.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.4.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.0",
+    "vite": "^7.1.9",
+    "vite-plugin-image-optimizer": "^2.0.2"
   },
   "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c"
 }
