--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "shadcn": "^3.4.0"
   },
   "devDependencies": {
-    "@eslint/css": "^0.12.0",
     "@eslint/js": "^9.37.0",
     "@stylistic/eslint-plugin": "^5.4.0",
     "@tailwindcss/vite": "^4.1.14",
@@ -37,11 +36,13 @@
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
+    "lightningcss": "^1.30.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "vite-plugin-image-optimizer": "^2.0.2"
   }
 }
