--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
     "lightningcss": "^1.30.2",
+    "sharp": "^0.34.4",
+    "svgo": "^4.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
