--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,11 +34,13 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
@@ -46,6 +48,7 @@
     "react-hook-form": "^7.64.0",
     "react-router-dom": "^7.9.4",
     "shadcn": "^3.4.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
