feat(sb-db-pipeline): migrate database logic and setup Supabase workflow
Fix workflow: install Supabase CLI via curl instead of npm

Update README & Allow Workflow Dry Runs For All Members

test dummy migration for dry run validation

Clean Migrations & Restore Database README for workflow dry-run test

Remove Node, Test Workflow

Add Node.js Setup

workflow test

workflow test

Use NPM Install And Add Documentation

Adjust CLI Install

Revert To Last Supabase Link Success

Debug Dry-Run: supabase folder struct check

CLI: Supabase Folder Workaround

populate migration history before linking Supabase project

tutorial migration

Remove Sensitive Data, Reduce Scope of Deploy, Enhance .gitignore

Remove Sensitive Data From Repo

--- a/.gitignore
+++ b/.gitignore
@@ -30,9 +30,18 @@ obj/
 *.vssscc
 
 # Database
+/supabase/
 *.db
 *.sqlite
 *.sqlite3
+local_SB.session.sql
+database/seed_data
+database/supabase
+database/.branches
+
+# Ignore any .temp folders or files
+**/.temp/
+*.temp
 
 # Logs
 logs/
