--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,11 @@ name: Deploy to Supabase
 
 on:
   push:
-    branches: [main]
+    branches:
+    - '**'
   pull_request:
-    branches: [main]
+    branches: 
+    - '**'
 
 jobs:
   deploy:
