--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           curl -L https://github.com/supabase/cli/releases/latest/download/supabase_$(uname)_amd64.tar.gz | tar xz
           sudo mv supabase /usr/local/bin/  
 
-      #Necessary To Push To Supabase
+      #Necessary To Push SQL Artifacts To Supabase
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
