--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         run: supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
 
-      #Runs Final Check to Validate migrate for Pull Request
+      #Runs Final Check to Validate Migrate For Pull Request
       - name: Dry-run on PR                                    
         if: github.event_name == 'pull_request'
         env:
