--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,12 @@
 name: Deploy to Supabase
 
 on:
-  push:
+  push:         #Only Pushes Migrations Deployed On Main Branch
     branches:
-    - '**'
-  pull_request:
+    - '**'        
+  pull_request: #Run Dry-Run To Validate Schema Pre-Merge
     branches: 
-    - '**'
+    - '**'    
 
 jobs:
   deploy:
@@ -16,17 +16,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Supabase CLI
-        run: |
-          curl -L https://github.com/supabase/cli/releases/latest/download/supabase_$(uname)_amd64.tar.gz | tar xz
-          sudo mv supabase /usr/local/bin/  
-
       #Necessary To Push SQL Artifacts To Supabase
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20' 
-          
+      
+      #Curl May Be Error-Prone For CI/CD Environments
+      - name: Install Supabase CLI
+        run: npm install -g supabase@latest
+          #|
+          #curl -L https://github.com/supabase/cli/releases/latest/download/supabase_$(uname)_amd64.tar.gz | tar xz
+          #sudo mv supabase /usr/local/bin/  
+        
       - name: Link to Supabase project
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
