--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,25 +24,27 @@ jobs:
       
       #Curl May Be Error-Prone For CI/CD Environments
       - name: Install Supabase CLI
-        run: npm install -g supabase@latest
+        run: npm i supabase --save-dev
           #|
           #curl -L https://github.com/supabase/cli/releases/latest/download/supabase_$(uname)_amd64.tar.gz | tar xz
           #sudo mv supabase /usr/local/bin/  
+
+        
         
       - name: Link to Supabase project
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
+        run: npx supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
 
       #Runs Final Check to Validate Migrate For Pull Request
       - name: Dry-run on PR                                    
         if: github.event_name == 'pull_request'
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: supabase db push --dry-run
+        run: npx supabase db push --dry-run
 
       - name: Push migrations to Supabase
         if: github.ref == 'refs/heads/main'
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: supabase db push
+        run: npx supabase db push
