--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,10 @@ name: Deploy to Supabase
 on:
   push:         #Only Pushes Migrations Deployed On Main Branch
     branches:
-    - '**'        
+    - '**'
   pull_request: #Run Dry-Run To Validate Schema Pre-Merge
     branches: 
-    - '**'    
+    - '**'
 
 jobs:
   deploy:
@@ -16,35 +16,31 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install Supabase CLI
+        run: |
+          curl -L https://github.com/supabase/cli/releases/latest/download/supabase_$(uname)_amd64.tar.gz | tar xz
+          sudo mv supabase /usr/local/bin/  
+
       #Necessary To Push SQL Artifacts To Supabase
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20' 
-      
-      #Curl May Be Error-Prone For CI/CD Environments
-      - name: Install Supabase CLI
-        run: npm i supabase --save-dev
-          #|
-          #curl -L https://github.com/supabase/cli/releases/latest/download/supabase_$(uname)_amd64.tar.gz | tar xz
-          #sudo mv supabase /usr/local/bin/  
-
-        
-        
+          
       - name: Link to Supabase project
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: npx supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
+        run: supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
 
-      #Runs Final Check to Validate Migrate For Pull Request
+      #Runs Final Check to Validate migrate for Pull Request
       - name: Dry-run on PR                                    
         if: github.event_name == 'pull_request'
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: npx supabase db push --dry-run
+        run: supabase db push --dry-run
 
       - name: Push migrations to Supabase
         if: github.ref == 'refs/heads/main'
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: npx supabase db push
+        run: supabase db push
