--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,13 @@ jobs:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         run: supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_REF }}
 
+      #Validates Population Of Migration Directory For Symbolic Link supabse -> database
+      - name: List migrations
+        run: |
+            echo "Current working directory: $(pwd)"
+            ls -l supabase
+            ls -l supabase/migrations || echo "No migrations directory found"
+
       #Runs Final Check to Validate migrate for Pull Request
       - name: Dry-run on PR                                    
         if: github.event_name == 'pull_request'
