--- a/database/.gitignore
+++ b/database/.gitignore
@@ -14,6 +14,7 @@ env.production
 **/database/.branches
 **/database/.temp
 **/database/seed_data
+**/database/supabase-config/supabase/.temp
 # IDE and editor settings
 vscode/
 idea/
