--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -16,8 +16,11 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
+    "allowJs": true,
+    "checkJs": true,
 
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo"
   },
-  "include": ["eslint.config.js", "vite.config.ts"]
+  "include": ["eslint.config.js", "vite.config.ts"],
+  "exclude": ["node_modules"]
 }
