fix (data): update enums

--- a/database/tsconfig.drizzle.json
+++ b/database/tsconfig.drizzle.json
@@ -19,7 +19,7 @@
     },
     "include": [
         "src/models/*.ts",
-        "src/enums.ts",
+        "src/enums.js",
         "drizzle.config.ts",
     ],
     "exclude": ["node_modules"]
