--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ jobs:
     concurrency: cd-supabase-${{ github.ref }}
 
     env:
-      SUPABASE_ACCESS_TOKEN: '${{ secrets.SUPABASE_ACCESS_TOKEN }}'
+      DATABASE_URL: '${{ secrets.DATABASE_URL }}'
 
     steps:
       - name: Checkout Repository
