--- a/database/package.json
+++ b/database/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "bun --bun tsc --project tsconfig.drizzle.json",
+    "build:ci": "bun --bun tsc",
     "db:generate": "bun --bun drizzle-kit generate --config drizzle/database/drizzle.config.js",
     "db:push": "bun --bun drizzle-kit push --config drizzle/database/drizzle.config.js"
   },
