chore (db): seeding script + seeding command in package.json

--- a/database/package.json
+++ b/database/package.json
@@ -6,7 +6,8 @@
     "build": "bun --bun tsc --project tsconfig.drizzle.json",
     "build:ci": "bun --bun tsc",
     "db:generate": "bun --bun drizzle-kit generate --config drizzle/database/drizzle.config.js",
-    "db:push": "bun --bun drizzle-kit push --config drizzle/database/drizzle.config.js"
+    "db:push": "bun --bun drizzle-kit push --config drizzle/database/drizzle.config.js",
+    "db:seed": "bun --bun --env-file=./.env seed_data/SeedData.ts"
   },
   "dependencies": {
     "drizzle-orm": "^0.44.7"
