--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "frontend",
     "shared",
     "database"
-  ]
+  ],
+  "dependencies": {
+    "drizzle-seed": "^0.3.1",
+    "postgres": "^3.4.8"
+  }
 }
