--- a/database/package.json
+++ b/database/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "drizzle-orm": "^0.44.7",
-    "drizzle-seed": "^0.3.1"
+    "drizzle-seed": "^0.3.1",
+    "postgres": "^3.4.8"
   },
   "devDependencies": {
     "@types/bun": "^1.3.3",
