--- a/database/tsconfig.json
+++ b/database/tsconfig.json
@@ -19,7 +19,8 @@
     "composite": true,
 
     "rootDir": "../",
-    "outDir": "dist"
+    "outDir": "dist",
+    "types": ["bun"]
   },
   "include": [
     "../shared/**/*.ts",
