--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,6 @@
     "react-dom": "^19.2.4",
     "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.13.0",
     "remark-gfm": "^4.0.1",
     "shadcn": "^3.8.4",
     "tailwind-merge": "^3.4.0",
@@ -60,6 +59,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.4",
     "lightningcss": "^1.31.1",
+    "react-router": "^7.13.0",
     "sharp": "^0.34.5",
     "svgo": "^4.0.0",
     "tailwind-merge": "^3.4.0",
