--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --bun vite",
-    "build": "bun --bun tsc -b && bun --bun vite build",
+    "build": "bun --bun vite build",
     "preview": "bun --bun vite preview"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@internationalized/date": "^3.11.0",
     "@lucide/svelte": "^0.561.0",
+    "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.51.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/vite": "^4.1.18",
@@ -33,7 +34,6 @@
     "paneforge": "^1.0.2",
     "sharp": "^0.34.5",
     "svelte": "^5.50.3",
-    "svelte-adapter-bun-next": "^1.0.3",
     "svelte-sonner": "^1.0.7",
     "sveltekit-superforms": "^2.29.1",
     "svgo": "^4.0.0",
