--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@internationalized/date": "^3.11.0",
     "@lucide/svelte": "^0.564.0",
-    "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.51.0",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/vite": "^4.1.18",
@@ -34,6 +33,7 @@
     "paneforge": "^1.0.2",
     "sharp": "^0.34.5",
     "svelte": "^5.51.1",
+    "svelte-adapter-bun-next": "^1.0.3",
     "svelte-sonner": "^1.0.7",
     "sveltekit-superforms": "^2.29.1",
     "svgo": "^4.0.0",
