--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-plugin-svelte": "^3.15.0",
     "globals": "^17.3.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.55.1-alpha.4"
+    "typescript-eslint": "^8.56.0"
   },
   "workspaces": [
     "frontend",
